Fix spellcheck button menu in IE8 (change z-index and move the button to the right)

--- a/skins/classic/iehacks.css
+++ b/skins/classic/iehacks.css
@@ -106,7 +106,7 @@ body.iframe div.messageheaderbox
 
 #quicksearchbar
 {
-  z-index: 250;
+  z-index: 240;
 }
 
 #addresslist,
